--- a/huawei-test/unix_test.conf
+++ b/huawei-test/unix_test.conf
@@ -1,9 +1,9 @@
 input{
    unix_hw{
     codec => telemetry_gpb_hw {
-            protofiles => "/opt/elk/logstash-5.5.0/huawei-test/protos/"
+            protofiles => "/usr/elk/logstash-5.5.0/huawei-test/protos/"
         }
-    path => "/opt/elk/logstash-5.5.0/huawei-test/UNIX.d"
+    path => "/usr/elk/logstash-5.5.0/huawei-test/UNIX.d"
    } 
 }
 filter {
