--- a/HuaweiDialGrpc/conf/config.json
+++ b/HuaweiDialGrpc/conf/config.json
@@ -2,8 +2,8 @@
   "routers": [
     {
       "aaa": {
-        "username": "dublin123",
-        "password": "Dublin@123"
+        "username": "",
+        "password": ""
       },
       "address": "10.137.104.29:57401",
       "sample_interval": 1000,
@@ -21,5 +21,5 @@
     }
 
   ],
-  "socket_address": "/opt/elk/logstash-5.5.0/huawei-test/UNIX.d"
+  "socket_address": "/usr/elk/logstash-5.5.0/huawei-test/UNIX.d"
 }
