--- a/huawei-test/unix_test.conf
+++ b/huawei-test/unix_test.conf
@@ -21,7 +21,7 @@ filter {
 output{
    elasticsearch {
       hosts => "127.0.0.1:9200"
-      index => "logstash-telemetry-%{+YYYY.MM.dd}"
+      index => "logstash_%{+YYYY.MM.dd}"
       document_type => "huawei"
    }  
 }
