--- a/huawei-test/unix_test.conf
+++ b/huawei-test/unix_test.conf
@@ -1,9 +1,7 @@
 input{
    unix_hw{
-    codec => protobuf {
-                class_name => "telemetry.Telemetry"
-    		include_path => ['/usr/elk/logstash-5.5.0/huawei-test/protos/huawei-telemetry_pb.rb','/usr/elk/logstash-5.5.0/huawei-test/protos/huawei-telemetry.pb.rb', '/usr/elk/logstash-5.5.0/huawei-test/protos/telemetry_pb.rb', '/usr/elk/logstash-5.5.0/huawei-test/protos/huawei-debug_pb.rb','/usr/elk/logstash-5.5.0/huawei-test/protos/huawei-ifm_pb.rb','/usr/elk/logstash-5.5.0/huawei-test/protos/openconfig-telemetry_pb.rb']
-    		protobuf_version => 3
+    codec => telemetry_gpb_hw {
+            protofiles => "/usr/elk/logstash-5.5.0/huawei-test/protos/"
         }
     path => "/usr/elk/logstash-5.5.0/huawei-test/UNIX.d"
    } 
